--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
